# Shamrock

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .codecov.yml  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  AGENTS.md  CITATION.bib  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  Status.md  TODO.md  build  setup.py
src/: CMakeLists.txt  aliases.hpp  flags.hpp  main.cpp  main_amr.cpp  main_lib.cpp  main_sph.cpp  main_test.cpp  main_test2.cpp  main_visu.cpp  make_version_file.py  mem_track.hpp  pybindaliases.hpp  version.hpp
src/algs/: cfl_utils.hpp  integrators_utils.hpp  syclreduction.hpp
src/benchmarks/: CMakeLists.txt  shamrock_article_1Tests.cpp
src/com/: sparse_mpi.hpp
src/core/: CMakeLists.txt
src/interfaces/: CMakeLists.txt  interface_generator.cpp  interface_generator.hpp  interface_generator_impl.hpp  interface_handler.cpp  interface_handler.hpp  interface_handler_impl.hpp  interface_selector.hpp
src/io/: dump.hpp  logger.hpp  logs.hpp
src/models/: CMakeLists.txt
src/particles/: particle_patch_mover.hpp
src/patch/: CMakeLists.txt  compute_field.hpp  global_var.cpp  global_var.hpp  merged_patch.hpp  patch.cpp  patch.hpp  patch_field.hpp  patch_reduc_tree.hpp  patchdata.cpp  patchdata.hpp  patchdata_buffer.hpp  patchdata_exchanger.cpp  patchdata_exchanger.hpp  patchdata_exchanger_impl.hpp  patchdata_field.hpp  patchdata_layout.hpp  patchtree.cpp  patchtree.hpp  serialpatchtree.cpp  serialpatchtree.hpp
src/patchscheduler/: CMakeLists.txt  loadbalancing_hilbert.cpp  loadbalancing_hilbert.hpp  patch_content_exchanger.hpp  scheduler_mpi.cpp  scheduler_mpi.hpp  scheduler_patch_data.cpp  scheduler_patch_data.hpp  scheduler_patch_list.cpp  scheduler_patch_list.hpp  sim_box.hpp
src/physics/: eos.hpp  units.hpp
src/runscript/: CMakeLists.txt  rscripthandler.cpp  rscripthandler.hpp  shamrockapi.hpp
src/scheduler/: CMakeLists.txt  _scheduler.cpp  hilbertsfc.hpp  loadbalancing.hpp  loadbalancing_hilbert.cpp  loadbalancing_hilbert.hpp  mpi_scheduler.hpp  patch.cpp  patch.hpp  patchdata.cpp  patchdata.hpp  patchtree.cpp  patchtree.hpp  scheduler.cpp  scheduler.hpp  scheduler_mpi.cpp  scheduler_mpi.hpp  scheduler_patch_data.cpp  scheduler_patch_data.hpp  scheduler_patch_list.cpp  scheduler_patch_list.hpp
src/setup/: SPHSetup.hpp
src/sfc/: bmi.hpp  hilbert.hpp  morton.hpp
src/shamalgs/: CMakeLists.txt  algorithm.hpp  intManip.hpp  memory.hpp  numeric.hpp  random.hpp  reduction.hpp  serialize.cpp  serialize.hpp  shamalgs.hpp  syclManip.hpp  vectorManip.hpp
src/shambackends/: CMakeLists.txt  math.hpp  sycl.hpp  typeAliasBase.hpp
src/shambase/: CMakeLists.txt  Constants.hpp  DistributedData.hpp  SourceLocation.hpp  StorageComponent.hpp  aliases_float.hpp  aliases_int.hpp  bytestream.hpp  endian.hpp  exception.cpp  exception.hpp  floats.hpp  fortran_io.hpp  integer.hpp  integer_sycl.hpp  macroLocation.hpp  memory.hpp  mpi.hpp  numeric_limits.hpp  primitive_type_info.hpp  shambase.hpp  stacktrace.cpp  stacktrace.hpp  string.hpp  stringUtils.hpp  sycl.hpp  sycl_builtins.hpp  sycl_utils.hpp  sycl_vec_aliases.hpp  throwUtils.hpp  time.hpp  type_aliases.hpp  type_traits.hpp  vectors.hpp
src/shambindings/: CMakeLists.txt  pybind11_stl.hpp  pybind_init.cpp  pybindaliases.hpp  pytypealias.hpp  valarray_fix.hpp
src/shamcmdopt/: CMakeLists.txt
src/shamcomm/: CMakeLists.txt  CommProtocolException.hpp  CommunicationBuffer.hpp  collectives.cpp  collectives.hpp  io.cpp  io.hpp  mpiErrorCheck.cpp  mpiErrorCheck.hpp  mpiInfo.cpp  mpiInfo.hpp  worldInfo.cpp  worldInfo.hpp
src/shamcxxstd/: CMakeLists.txt
src/shamformat/: CMakeLists.txt
src/shammath/: AABB.hpp  BBAA.hpp  CMakeLists.txt  CoordRange.cpp  CoordRange.hpp  CoordRangeTransform.cpp  CoordRangeTransform.hpp  DiscontinuousIterator.hpp  crystalLattice.hpp  derivatives.hpp  integrator.hpp  intervals.hpp  matrix.hpp  riemann.hpp  slopeLimiter.hpp  sphkernels.hpp  sycl_utilities.hpp
src/shammodels/: AMRGodunovModel.hpp  AMRGodunovSolver.hpp  BasicGas.cpp  BasicGas.hpp  BasicSPHGhosts.cpp  BasicSPHGhosts.hpp  CMakeLists.txt  EOSConfig.hpp  ExtForceConfig.hpp  SPHHandler.hpp  SPHModel.cpp  SPHModel.hpp  SPHModelSolver.cpp  SPHModelSolver.hpp  SPHSolverImpl.cpp  SPHSolverImpl.hpp  VariantSPHModel.hpp
src/shammpi/: worldInfo.cpp  worldInfo.hpp
src/shamphys/: BlackHoles.hpp  CMakeLists.txt  Planets.hpp  SPHDisciterator.hpp  eos.hpp
src/shampylib/: CMakeLists.txt
src/shamrock/: CMakeLists.txt
src/shamsys/: CMakeLists.txt  Comm.hpp  CommImplBuffer.cpp  CommImplBuffer.hpp  CommProtocol.hpp  Communicator.hpp  EnvVariables.cpp  EnvVariables.hpp  Log.hpp  MicroBenchmark.cpp  MicroBenchmark.hpp  MpiDataTypeHandler.hpp  MpiWrapper.hpp  NodeInstance.cpp  NodeInstance.hpp  SignalCatch.cpp  SignalCatch.hpp  SyclHelper.cpp  SyclHelper.hpp  SyclMpiTypes.cpp  SyclMpiTypes.hpp  cmdopt.cpp  log.hpp  mpi_handler.hpp  mpi_wrapper.hpp  sycl_handler.cpp  sycl_mpi_interop.cpp  sycl_mpi_interop.hpp  sysinfo.cpp
src/shamterm/: CMakeLists.txt
src/shamtest/: CMakeLists.txt  PyScriptHandle.hpp  shamtest.cpp  shamtest.hpp
src/shamtree/: CMakeLists.txt
src/shamunits/: CMakeLists.txt  README.md  exemple.cpp
src/shamutils/: SourceLocation.hpp  intervals.hpp  stringUtils.hpp  sycl_utilities.hpp  sycl_utils.hpp  throwUtils.hpp
src/sph/: forces.hpp  gas_sync.hpp  kernels.hpp  leapfrog.hpp  smoothing_lenght.hpp  smoothing_lenght_impl.hpp  sph_aliases.hpp  sphpart.hpp  sphpatch.hpp
src/sys/: CMakeLists.txt  cmdopt.hpp  mpi_handler.cpp  mpi_handler.hpp  mpi_wrapper.hpp  sycl_handler.cpp  sycl_handler.hpp  sycl_mpi_interop.hpp
src/testing/: CMakeLists.txt  tree_performance.cpp
src/tests/: CMakeLists.txt  benchmark_selfgrav.cpp  fmmTests.cpp  phantom_read_test.cpp  ref_files.hpp  shamrock_article_1Tests.cpp  test_global.hpp  test_pythonscript_handle.cpp
src/tree/: CMakeLists.txt  karras_alg.cpp  karras_alg.hpp  key_morton_sort.cpp  key_morton_sort.hpp  morton.cpp  morton.hpp  mpi_scheduler.hpp  patch.hpp  radix_tree.cpp  radix_tree.hpp
src/unittests/: CMakeLists.txt  shamrockbench.cpp  (+11 more)
(+2882 files in other folders)
